<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dino Pedia</string>
    <string name="info_famili_name">Nama famili</string>
    <string name="info_famili_icon">Ikon Famili</string>
    <string name="info_famili_deskripsi">Deskripsi Famili</string>
    <string name="info_famili_periodehidup">Periode hidup Famili</string>
    <string name="info_famili_KarakteristikFisik">Karakteristik Fisik famili</string>
    <string name="info_famili_HabitatdanLingkungan">Habitat dan Lingkungan famili</string>
    <string name="info_famili_Perilaku">Perilaku famili</string>
    <string name="info_famili_Klasifikasi">Klasifikasi famili</string>
    <string name="info_dino_startIndex">Start Index</string>
    <string name="info_dino_endIndex">End Index</string>
    <string-array name="famili_name">
        <item>Tyrannosauridae</item>
        <item>Sauropoda</item>
        <item>Stegosauridae</item>
        <item>Hadrosauridae</item>
        <item>Ceratopsidae</item>
        <item>Ankylosauridae</item>
        <item>Ornithomimidae</item>
        <item>Velociraptoridae</item>
    </string-array>
    <string-array name="famili_icon">

        <item>@drawable/tyrannosaurus</item>
        <item>@drawable/sauropoda</item>
        <item>@drawable/velorap</item>
        <item>@drawable/ornithopoda</item>
        <item>@drawable/ceratopsia</item>
        <item>@drawable/ankylosaurus</item>
        <item>@drawable/nothronychus</item>
        <item>@drawable/velociraptor</item>

    </string-array>
    <string-array name="famili_description">
        <item>Famili ini dikenal dengan dinosaurus karnivora raksasa, dengan kepala besar, gigi tajam, dan tubuh yang besar.</item>
        <item>Famili ini dikenal dengan dinosaurus bertubuh besar, memiliki leher panjang, dan ekor besar.</item>
        <item> Famili ini dikenal dengan dinosaurus bertubuh besar yang memiliki ciri khas "plated" di punggungnya dan duri di ekornya.</item>
        <item>Famili ini dikenal dengan dinosaurus herbivora yang memiliki mulut mirip bebek dan kadang-kadang memiliki kresta di kepala mereka.</item>
        <item> Famili ini dikenal dengan dinosaurus bertanduk yang memiliki tanduk di tengkorak dan kadang-kadang memiliki "frill" (kerah tulang) di bagian belakang kepala.</item>
        <item>Famili ini dikenal dengan dinosaurus bertubuh berat dan dilapisi dengan tulang datar yang membentuk "armor" (zirah).</item>
        <item>Famili ini dikenal dengan dinosaurus berpostur mirip burung yang memiliki kaki panjang dan tubuh ringan.</item>
        <item>Famili ini dikenal dengan dinosaurus karnivora kecil hingga sedang, dengan cakar besar di kaki belakang.</item>
    </string-array>
    <string-array name="famili_periodehidup">
        <item>Kapur Awal hingga Kapur Akhir (sekitar 68–66 juta tahun yang lalu).</item>
        <item>Jura Akhir hingga Kapur Akhir (sekitar 157–66 juta tahun yang lalu).</item>
        <item>Jura Awal hingga Jura Akhir (sekitar 155–150 juta tahun yang lalu).</item>
        <item>Kapur Awal hingga Kapur Akhir (sekitar 100–66 juta tahun yang lalu).</item>
        <item> Kapur Awal hingga Kapur Akhir (sekitar 83–66 juta tahun yang lalu).</item>
        <item>Kapur Awal hingga Kapur Akhir (sekitar 125–66 juta tahun yang lalu).</item>
        <item>Kapur Awal hingga Kapur Akhir (sekitar 125–66 juta tahun yang lalu).</item>
        <item>Kapur Awal hingga Kapur Akhir (sekitar 75–71 juta tahun yang lalu).</item>
    </string-array>
    <string-array name="famili_KarakteristikFisik">
        <item>Tengkorak besar, gigi besar, dan lengan pendek. Biasanya memiliki tubuh besar dan tungkai belakang yang kuat.</item>
        <item>Tubuh besar, leher panjang, ekor besar, dan kaki yang relatif kecil.</item>
        <item>Tubuh besar dengan "plated" di punggung dan duri di ekor. Tengkorak kecil dengan otak yang relatif kecil.</item>
        <item>Tubuh besar dengan leher dan ekor yang relatif panjang. Kadang-kadang memiliki kresta di kepala.</item>
        <item>Tubuh besar dengan tanduk di tengkorak dan "frill" di belakang kepala. Biasanya memiliki cakar tajam.</item>
        <item>Tubuh besar dengan "armor" yang menutupi tubuh dan kadang-kadang memiliki bola tulang di ujung ekor sebagai senjata.</item>
        <item>Tubuh ringan dengan kaki panjang dan kepala kecil. Biasanya tidak memiliki cakar atau gigi yang besar.</item>
        <item>Tubuh kecil hingga sedang dengan cakar besar di kaki belakang. Kepala relatif kecil dengan mata tajam.</item>

    </string-array>
    <string-array name="famili_HabitatdanLingkungan">
        <item>Menyukai daratan terbuka dan hutan subtropis.</item>
        <item> Mendiami daratan dan hutan tropis.</item>
        <item>Umumnya mendiami dataran terbuka dan hutan.</item>
        <item>Mendiami dataran rendah dan hutan tropis.</item>
        <item> Mendiami dataran luas dan hutan berhutan.</item>
        <item> Umumnya mendiami dataran terbuka dan hutan.</item>
        <item>Umumnya mendiami dataran luas dan hutan.</item>
        <item>Biasanya mendiami daerah berhutan dan bersemak.</item>
    </string-array>
    <string-array name="famili_Perilaku">
        <item>Diperkirakan sebagai pemburu soliter yang agresif.</item>
        <item>Diperkirakan sebagai herbivora yang menghabiskan sebagian besar waktunya untuk mencari makan.</item>
        <item>Diperkirakan sebagai herbivora yang mungkin menggunakan "plated" dan duri sebagai perlindungan terhadap predator.</item>
        <item>Diperkirakan sebagai herbivora yang menghabiskan sebagian besar waktunya untuk mencari makan dan hidup secara berkelompok.</item>
        <item>Diperkirakan sebagai herbivora yang dapat membela diri menggunakan tanduknya.</item>
        <item>Diperkirakan sebagai herbivora yang memiliki perlindungan yang kuat dari predator berkat "armor" mereka.</item>
        <item>Diperkirakan sebagai omnivora yang cepat dan lincah, mungkin sering kali menjadi pemangsa kecil dan juga memakan tumbuhan.</item>
        <item>Diperkirakan sebagai pemburu berkelompok yang cerdas dan menggunakan cakar mereka untuk merobek mangsanya.</item>
    </string-array>
    <string-array name="famili_Klasifikasi">
        <item>Termasuk dalam infraorder Tetanurae dan suborder Theropoda.</item>
        <item>Termasuk dalam order Saurischia dan suborder Sauropodomorpha.</item>
        <item>Termasuk dalam ordo Ornithischia dan suborder Stegosauria.</item>
        <item>Termasuk dalam ordo Ornithischia dan suborder Ornithopoda.</item>
        <item>Termasuk dalam ordo Ornithischia dan suborder Ceratopsia.</item>
        <item>Termasuk dalam ordo Ornithischia dan suborder Ankylosauria.</item>
        <item>Termasuk dalam ordo Theropoda.</item>
        <item>Termasuk dalam ordo Theropoda.</item>
    </string-array>
    <string-array name="start_index_dino">
    <item>0</item>
        <item>1</item>
        <item>4</item>
        <item>5</item>
        <item>8</item>
        <item>10</item>
        <item>11</item>
        <item>13</item>
    </string-array>
    <string-array name="end_index_dino">
        <item>0</item>
        <item>3</item>
        <item>4</item>
        <item>7</item>
        <item>9</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
    </string-array>
    <string name="info_dino_name">Nama Dino</string>
    <string name="info_dino_icon">Ikon Dino</string>
    <string name="info_dino_deskripsi">Deskripsi Dino</string>
    <string name="info_dino_Karakteristik">Karakteristik Dino</string>
    <string name="info_dino_Kelompok">Kelompok Fisik Dino</string>
    <string name="info_dino_Habitat">Habitat Dino</string>
    <string name="info_dino_Makanan">Makanan Dino</string>
    <string name="info_dino_PanjangTinggiBobot">Panjang, Tinggi dan Bobot Dino</string>
    <string name="info_dino_Kelemahan">Kelemahan Dino</string>
    <string-array name="dino_name">
        <item>Tyrannosaurus Rex</item>
        <item>Brachiosaurus</item>
        <item>Apatosaurus</item>
        <item>Diplodocus</item>
        <item>Stegosaurus</item>
        <item>Parasaurolophus</item>
        <item>Edmontosaurus</item>
        <item>Corythosaurus</item>
        <item>Triceratops</item>
        <item>Styracosaurus</item>
        <item>Ankylosaurus</item>
        <item>Ornithomimus</item>
        <item>Gallimimus</item>
        <item>Velociraptor</item>
        <item>Deinonychus</item>

    </string-array>
    <string-array name="dino_deskripsi">
        <item>Tyrannosaurus Rex adalah salah satu dinosaurus karnivora terbesar yang pernah hidup. Dikenal dengan tengkorak besar dan gigi tajam, T-Rex adalah predator yang menakutkan.</item>
        <item>Brachiosaurus adalah salah satu dinosaurus herbivora terbesar yang pernah hidup. Dikenal dengan leher panjang dan tubuh besar, Brachiosaurus adalah pemakan tumbuhan yang dominan di habitatnya.</item>
        <item>Apatosaurus, dahulu dikenal sebagai Brontosaurus, adalah dinosaurus herbivora besar dengan tubuh yang panjang dan berat.</item>
        <item>Diplodocus adalah dinosaurus herbivora besar dengan leher panjang dan ekor yang panjang pula. Dikenal karena tubuhnya yang panjang dan ramping.</item>
        <item>Stegosaurus adalah dinosaurus herbivora dengan tubuh besar dan terkenal dengan cakarnya yang besar dan plat yang terdapat di punggungnya.</item>
        <item>Parasaurolophus adalah dinosaurus herbivora berukuran sedang dengan ciri khas semacam "trompet" di bagian atas kepalanya.</item>
        <item>Edmontosaurus adalah dinosaurus herbivora besar yang memiliki leher panjang dan tubuh yang berat.</item>
        <item>Corythosaurus adalah dinosaurus herbivora dengan ciri khas "topi" pada kepala yang menyerupai kresta.</item>
        <item>Triceratops adalah dinosaurus herbivora berukuran besar yang dikenal dengan tanduk dan pelindung di kepalanya.</item>
        <item>Styracosaurus adalah dinosaurus herbivora dengan tanduk besar dan piringan tulang di lehernya.</item>
        <item>Ankylosaurus adalah dinosaurus herbivora dengan tubuh yang dilengkapi dengan piringan tulang dan gada di ekornya.</item>
        <item>Ornithomimus adalah dinosaurus berukuran sedang yang mirip dengan burung, dengan tubuh yang ramping dan kaki yang panjang.</item>
        <item>Gallimimus adalah dinosaurus berukuran sedang yang dikenal dengan kemampuan berlari yang sangat cepat, mirip dengan burung.</item>
        <item>Velociraptor adalah dinosaurus karnivora berukuran sedang yang terkenal dengan kecepatan dan kecerdasannya.</item>
        <item>Deinonychus adalah dinosaurus karnivora berukuran sedang yang terkenal dengan cakar yang besar di kaki belakangnya.</item>


    </string-array>
</resources>